Update moves